<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.davegilbier.swoosh.MainActivity"

    android:background="@drawable/welcome_screen_bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/swoosh_logo"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="133dp"
        android:id="@+id/logo"
        android:layout_marginTop="28dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_all_in"
        android:textSize="55sp"
        android:textColor="#FFF"
        android:layout_marginTop="53dp"
        android:id="@+id/textView"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_going_all_out"
        android:textSize="25sp"
        android:textColor="#FFF"
        android:id="@+id/textViewSec"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_a_team_in_your_city_and_n_dominate_the_league"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="#FFF"
        android:id="@+id/textViewThird"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textViewSec"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_height="50dp"
        android:layout_width="300dp"
        android:gravity="center"
        android:id="@+id/startBtn"
        android:layout_marginBottom="24dp"
        android:text="@string/get_started"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="@drawable/button_boarder"
        android:alpha="0.8"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="startNow"/>

</RelativeLayout>
